// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TopHeader /> should renders with props correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <StaticRouter
    basename=""
    context={
      Object {
        "router": Object {
          "history": Object {
            "goBack": [Function],
            "test": "test",
          },
        },
      }
    }
    location="someLocation"
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "someLocation",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Connect(Connect(TopHeader))
        openedPanel="userAccountPanel"
      >
        <Connect(TopHeader)
          actions={
            Object {
              "push": [Function],
            }
          }
          openedPanel="userAccountPanel"
          router={
            Object {
              "location": Object {
                "hash": "#/profile",
                "pathname": "/",
                "search": "",
              },
            }
          }
          userAccount={
            Object {
              "role": "IDCR",
            }
          }
        >
          <TopHeader
            actions={
              Object {
                "push": [Function],
              }
            }
            isHasSearch={true}
            openedPanel="userAccountPanel"
            patientsInfo={
              Object {
                "browserTitle": "PulseTile",
                "logoB64": "testLogo",
                "themeColor": "green",
                "title": "PulseTile",
              }
            }
            router={
              Object {
                "location": Object {
                  "hash": "#/profile",
                  "pathname": "/",
                  "search": "",
                },
              }
            }
            userAccount={
              Object {
                "role": "IDCR",
              }
            }
          >
            <div
              className="navbar"
            >
              <HomeButton
                className="btn-header btn-header-prev btn-home"
                homepageLink="/"
                pageUrl="profile"
              >
                <Link
                  replace={false}
                  to="/"
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    <PTButton
                      aria-label="Home"
                      className="btn-header btn-header-prev btn-home"
                      id="icon-home"
                    >
                      <button
                        aria-label="Home"
                        className="btn-header btn-header-prev btn-home"
                        id="icon-home"
                      >
                        <i
                          className="fa fa-home"
                        />
                      </button>
                    </PTButton>
                  </a>
                </Link>
              </HomeButton>
              <BackButton
                className="btn-header btn-header-prev btn-back"
                routeGoBack={[Function]}
              >
                <PTButton
                  aria-label="Back"
                  className="btn-header btn-header-prev btn-back"
                  id="icon-home"
                  onClick={[Function]}
                >
                  <button
                    aria-label="Back"
                    className="btn-header btn-header-prev btn-back"
                    id="icon-home"
                    onClick={[Function]}
                  >
                    <i
                      className="fa fa-arrow-left"
                    />
                  </button>
                </PTButton>
              </BackButton>
              <MainLogo
                patientsInfo={
                  Object {
                    "browserTitle": "PulseTile",
                    "logoB64": "testLogo",
                    "themeColor": "green",
                    "title": "PulseTile",
                  }
                }
                userAccount={
                  Object {
                    "role": "IDCR",
                  }
                }
              >
                <div
                  className="wrap-logo"
                >
                  <div
                    className="logo"
                  >
                    <div
                      className="logo-icon"
                    >
                      <Link
                        replace={false}
                        to="/"
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          <img
                            alt="logo"
                            className="img"
                            id="logo-image"
                            src="pulsetile-core-logo.png"
                          />
                          <img
                            alt="logo"
                            className="img logo-img hidden"
                            src="testLogo"
                          />
                        </a>
                      </Link>
                    </div>
                  </div>
                </div>
              </MainLogo>
              <UserPanel
                addUserPanels={Array []}
                homepageLink="/patients/null/patients-summary"
                pageUrl="profile"
                userId=""
              >
                <ul
                  className="user-panel"
                  role="tablist"
                >
                  <TopHeaderButtons
                    homepageLink="/patients/null/patients-summary"
                    pageUrl="profile"
                  />
                  <UserPanelItem
                    className="user-panel-item dropdown"
                    role="tab"
                  >
                    <li
                      className="user-panel-item dropdown"
                      role="tab"
                    >
                      <NotificationContent>
                        <div
                          className="notifications-drop dropdown-menu dropdown-menu-right"
                          id="tab-notifications"
                        >
                          <div
                            className="notifications-header"
                          >
                            Notifications (2)
                          </div>
                          <div
                            className="notifications-body"
                          >
                            <ul
                              className="notifications-list"
                            >
                              <li
                                className="notifications-list-item"
                              >
                                <div
                                  className="notification-info"
                                >
                                  Information from Liquid Logic (Social Care) is currently unavailable.
                                </div>
                                <div
                                  className="notification-time"
                                >
                                  <em>
                                    10 minutes ago
                                  </em>
                                </div>
                              </li>
                              <li
                                className="notifications-list-item"
                              >
                                <div
                                  className="notification-info"
                                >
                                  Information from Liquid Logic (Social Care) is currently unavailable.
                                </div>
                                <div
                                  className="notification-time"
                                >
                                  <em>
                                    15 minutes ago
                                  </em>
                                </div>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </NotificationContent>
                      <PTButton
                        aria-label="Notifications"
                        className="btn-header btn-notification"
                        onClick={[Function]}
                      >
                        <button
                          aria-label="Notifications"
                          className="btn-header btn-notification"
                          onClick={[Function]}
                        >
                          <div>
                            <i
                              className="fa fa-bell-o"
                            />
                            <span
                              className="count"
                            >
                              2
                            </span>
                          </div>
                        </button>
                      </PTButton>
                    </li>
                  </UserPanelItem>
                  <UserPanelItem
                    className="user-panel-item dropdown"
                    role="tab"
                  >
                    <li
                      className="user-panel-item dropdown"
                      role="tab"
                    >
                      <Connect(Connect(lifecycle(UserAccountPanel)))
                        onClick={[Function]}
                        onClose={[Function]}
                      >
                        <Connect(lifecycle(UserAccountPanel))
                          dispatch={[Function]}
                          initialiseData={
                            Object {
                              "mode": "demo",
                              "token": "d4281221-3950-4019-b207-18e49086dab8",
                              "version": "2.32.1",
                            }
                          }
                          onClick={[Function]}
                          onClose={[Function]}
                        >
                          <lifecycle(UserAccountPanel)
                            actions={
                              Object {
                                "logoutStart": [Function],
                              }
                            }
                            dispatch={[Function]}
                            initialiseData={
                              Object {
                                "mode": "demo",
                                "token": "d4281221-3950-4019-b207-18e49086dab8",
                                "version": "2.32.1",
                              }
                            }
                            onClick={[Function]}
                            onClose={[Function]}
                            user={
                              Object {
                                "role": "IDCR",
                              }
                            }
                          >
                            <UserAccountPanel
                              actions={
                                Object {
                                  "logoutStart": [Function],
                                }
                              }
                              dispatch={[Function]}
                              initialiseData={
                                Object {
                                  "mode": "demo",
                                  "token": "d4281221-3950-4019-b207-18e49086dab8",
                                  "version": "2.32.1",
                                }
                              }
                              onClick={[Function]}
                              onClose={[Function]}
                              user={
                                Object {
                                  "role": "IDCR",
                                }
                              }
                            >
                              <div
                                className="dropdown-user dropdown-menu-right dropdown-menu"
                                id="userAccountPanelElement"
                              >
                                <div
                                  className="user-profile-image"
                                  onClick={[Function]}
                                >
                                  <div
                                    className="img"
                                  >
                                    <img
                                      alt=""
                                      src="/images/user.jpg"
                                    />
                                  </div>
                                </div>
                                <div
                                  className="user-profile-info"
                                >
                                  <div
                                    className="user-profile-info__item name"
                                    onClick={[Function]}
                                  >
                                     
                                  </div>
                                  <div
                                    className="user-profile-info__descr"
                                  >
                                    <div
                                      className="user-profile-info__item role"
                                    >
                                      User Role:
                                      IDCR
                                    </div>
                                    <div
                                      className="user-profile-info__item email"
                                    />
                                  </div>
                                  <div
                                    className="specification"
                                  >
                                    <div
                                      className="user-profile-info__title registered"
                                    >
                                      Registered GP
                                    </div>
                                    <div
                                      className="user-profile-info__item version-back"
                                    >
                                      About Showcase Stack; PulseTile version 
                                      1.0.0
                                      /QEWD_Ripple version 
                                      2.32.1
                                    </div>
                                    <div
                                      className="user-profile-info__item version-front"
                                    >
                                      React version 
                                      15.6.2
                                    </div>
                                  </div>
                                  <PTButton
                                    aria-label="Log Out"
                                    className="btn btn-theme btn-block btn-signout"
                                    onClick={[Function]}
                                  >
                                    <button
                                      aria-label="Log Out"
                                      className="btn btn-theme btn-block btn-signout"
                                      onClick={[Function]}
                                    >
                                      <div>
                                        <span
                                          className="brn-text"
                                        >
                                          Sign Out
                                        </span>
                                         
                                        <i
                                          className="btn-icon fa fa-sign-out"
                                        />
                                      </div>
                                    </button>
                                  </PTButton>
                                </div>
                                <Connect(UserAccountPanelSettings)
                                  onClose={[Function]}
                                >
                                  <UserAccountPanelSettings
                                    actions={
                                      Object {
                                        "changeUserProfileTab": [Function],
                                      }
                                    }
                                    onClose={[Function]}
                                  >
                                    <div
                                      className="user-profile-settings dropdown"
                                    >
                                      <div
                                        className="user-profile-settings__btn"
                                        onClick={[Function]}
                                      >
                                        <i
                                          className="fa fa-gear"
                                        />
                                      </div>
                                      <div
                                        className="user-profile-settings__menu dropdown-menu dropdown-menu-small-size"
                                      >
                                        <div
                                          className="dropdown-menu-wrap-list"
                                        >
                                          <div
                                            className="dropdown-menu-list"
                                          >
                                            <div
                                              className="dropdown-menu-item"
                                              onClick={[Function]}
                                            >
                                              <span
                                                className="dropdown-menu-item-text"
                                              >
                                                Application Preferences
                                              </span>
                                            </div>
                                            <div
                                              className="dropdown-menu-item"
                                              onClick={[Function]}
                                            >
                                              <span
                                                className="dropdown-menu-item-text"
                                              >
                                                Personal Information
                                              </span>
                                            </div>
                                            <div
                                              className="dropdown-menu-item"
                                              onClick={[Function]}
                                            >
                                              <span
                                                className="dropdown-menu-item-text"
                                              >
                                                Contact Information
                                              </span>
                                            </div>
                                            <div
                                              className="dropdown-menu-item"
                                              onClick={[Function]}
                                            >
                                              <span
                                                className="dropdown-menu-item-text"
                                              >
                                                Change History
                                              </span>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </UserAccountPanelSettings>
                                </Connect(UserAccountPanelSettings)>
                              </div>
                            </UserAccountPanel>
                          </lifecycle(UserAccountPanel)>
                        </Connect(lifecycle(UserAccountPanel))>
                      </Connect(Connect(lifecycle(UserAccountPanel)))>
                      <PTButton
                        aria-controls="userAccountPanelElement"
                        aria-label="User Panel"
                        className="btn-header btn-user"
                        id="icon-profile"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="userAccountPanelElement"
                          aria-label="User Panel"
                          className="btn-header btn-user"
                          id="icon-profile"
                          onClick={[Function]}
                        >
                          <i
                            className="fa fa-user"
                          />
                        </button>
                      </PTButton>
                    </li>
                  </UserPanelItem>
                </ul>
              </UserPanel>
              <NavSearch
                userAccount={
                  Object {
                    "role": "IDCR",
                  }
                }
              >
                <div
                  className="header-search-container"
                >
                  <NavSearchButton
                    runSearch={[Function]}
                  >
                    <PTButton
                      aria-label="Search"
                      className="btn-header search-btn"
                      id="search"
                      onClick={[Function]}
                      title="Search"
                    >
                      <button
                        aria-label="Search"
                        className="btn-header search-btn"
                        id="search"
                        onClick={[Function]}
                        title="Search"
                      >
                        <i
                          className="fa fa-search"
                        />
                      </button>
                    </PTButton>
                  </NavSearchButton>
                  <div
                    className="wrap-search wrap-header-search"
                  >
                    <div
                      className="header-search"
                    >
                      <div
                        className="control-group left control-search-select dropdown"
                      >
                        <div>
                          <SearchContent
                            ADVANCED_SEARCH="advancedSearch"
                            BASIC_SEARCH="basicSearch"
                            SEARCH_CONTENT="searchContent"
                            onSelect={[Function]}
                            selected="basicSearch"
                          >
                            <div
                              className="dropdown-menu dropdown-menu-search-select dropdown-menu-panel dropdown-menu-left dropdown-menu-small-size"
                            >
                              <div
                                className="heading"
                              >
                                Search Options
                              </div>
                              <div
                                className="dropdown-menu-wrap-list"
                              >
                                <div
                                  className="dropdown-menu-list"
                                >
                                  <div
                                    className="dropdown-menu-item active"
                                    onClick={[Function]}
                                  >
                                    <span
                                      className="dropdown-menu-item-text"
                                    >
                                      Patient Search - Basic
                                    </span>
                                  </div>
                                  <div
                                    className="dropdown-menu-item"
                                    onClick={[Function]}
                                  >
                                    <span
                                      className="dropdown-menu-item-text"
                                    >
                                      Patient Search - Advanced
                                    </span>
                                  </div>
                                  <div
                                    className="dropdown-menu-item"
                                    onClick={[Function]}
                                  >
                                    <span
                                      className="dropdown-menu-item-text"
                                    >
                                      Clinical Query
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </SearchContent>
                          <PTButton
                            aria-label="Search"
                            className="btn btn-dropdown-toggle btn-search-toggle"
                            onClick={[Function]}
                          >
                            <button
                              aria-label="Search"
                              className="btn btn-dropdown-toggle btn-search-toggle"
                              onClick={[Function]}
                            >
                              <i
                                className="btn-icon fa fa-bars"
                              />
                            </button>
                          </PTButton>
                        </div>
                      </div>
                      <BasicPatientSearch>
                        <div>
                          <PTButton
                            aria-label="Search"
                            className="btn btn-search"
                            onClick={[Function]}
                          >
                            <button
                              aria-label="Search"
                              className="btn btn-search"
                              onClick={[Function]}
                            >
                              <i
                                className="btn-icon fa fa-search"
                              />
                            </button>
                          </PTButton>
                          <div
                            className="wrap-search-holder"
                          >
                            <div
                              className="search-holder"
                            >
                              <form
                                onSubmit={[Function]}
                              >
                                <input
                                  className="form-control"
                                  onChange={[Function]}
                                  placeholder="Search"
                                  type="text"
                                  value=""
                                />
                              </form>
                            </div>
                          </div>
                        </div>
                      </BasicPatientSearch>
                    </div>
                  </div>
                </div>
              </NavSearch>
            </div>
          </TopHeader>
        </Connect(TopHeader)>
      </Connect(Connect(TopHeader))>
    </Router>
  </StaticRouter>
</Provider>
`;

exports[`Component <TopHeader /> should renders with props correctly when we are on the ROOT page 1`] = `
<div
  className="navbar"
>
  <MainLogo
    patientsInfo={
      Object {
        "browserTitle": "PulseTile",
        "logoB64": "testLogo",
        "themeColor": "green",
        "title": "PulseTile",
      }
    }
    userAccount={
      Object {
        "role": "IDCR",
      }
    }
  />
  <UserPanel
    addUserPanels={Array []}
    homepageLink="/patients/null/patients-summary"
    pageUrl=""
    userId=""
  />
  <div
    className="navbar-space-right"
  />
</div>
`;

exports[`Component <TopHeader /> should renders with props correctly when we are on the ROOT page 2`] = `
<div
  className="navbar"
>
  <MainLogo
    patientsInfo={
      Object {
        "browserTitle": "PulseTile",
        "logoB64": "testLogo",
        "themeColor": "green",
        "title": "PulseTile",
      }
    }
    userAccount={
      Object {
        "role": "IDCR",
      }
    }
  />
  <UserPanel
    addUserPanels={Array []}
    homepageLink="/patients/null/patients-summary"
    pageUrl=""
    userId=""
  />
</div>
`;

exports[`Component <TopHeader /> should renders with props correctly when we are on the page Profile 1`] = `
<div
  className="navbar"
>
  <HomeButton
    className="btn-header btn-header-prev btn-home"
    homepageLink="/"
    pageUrl="profile"
  />
  <BackButton
    className="btn-header btn-header-prev btn-back"
    routeGoBack={[Function]}
  />
  <MainLogo
    patientsInfo={
      Object {
        "browserTitle": "PulseTile",
        "logoB64": "testLogo",
        "themeColor": "green",
        "title": "PulseTile",
      }
    }
    userAccount={
      Object {
        "role": "IDCR",
      }
    }
  />
  <UserPanel
    addUserPanels={Array []}
    homepageLink="/patients/null/patients-summary"
    pageUrl="profile"
    userId=""
  />
  <NavSearch
    userAccount={
      Object {
        "role": "IDCR",
      }
    }
  />
</div>
`;
